# kvstore-cpp

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.txt  README.md  config.yaml
.github/workflows/: ci.yml
data/: appendonly.aof
docs/: 404.html  about.html  benchmarks.html  docs.html  features.html  index.html  protocol.html  troubleshooting.html
docs/assets/: script.js  styles.css
include/: persistence.h  server.h  store.h  util.h
scripts/: build.sh  demo.sh  run_server.sh
src/: client.cpp  main.cpp  persistence.cpp  server.cpp  store.cpp  util.cpp
